<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <!-- Tool Bar-->
    <com.locart.Utils.CenteredToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ToolBarStyle"
        app:title="@string/update_email"/>

    <View
        android:id="@+id/toolbar_shadow"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/toolbar_drop_shadow" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:text="@string/delete_text_one"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email"
            android:drawableTint="@color/colorAccent"
            android:hint="@string/NewEmail"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterEmailAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email"
            android:drawableTint="@color/colorAccent"
            android:hint="@string/enterEmailAgain"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitNewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:background="@color/azure"
        android:text="@string/submitNewEmail"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:paddingLeft="10sp"
        android:paddingTop="30sp"
        android:paddingRight="10sp"
        android:paddingBottom="10sp"
        android:text="@string/NewEmailWarning"
        android:textSize="15sp"
        android:textStyle="bold" />
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>